# fuel_price

./: .gitignore  links.py  price.py  pyproject.toml  urls.py
fuel_price/: main.py  price.py
