[tool.poetry]
name = "fuel-price"
version = "0.1.0"
description = ""
authors = ["mintydevdaz <mintydevdaz@proton.me>"]
readme = "README.md"
packages = [{include = "fuel_price"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
